# rust-sql-html-css-javascript-dataanalysis

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  mssqlapi.rs
src/db/: database.rs
src/models/: correlation.rs  correlationstats.rs  currencydata.rs  customerbyyear.rs  housing.rs  hremployees.rs  mod.rs  ordersreport.rs  saleschoropleth.rs  topperformers.rs
static/: currencies.html  index.html
