[package]
name = "mssqlapi"
version = "0.1.0"
edition = "2021"

[dependencies]
tiberius = { version = "0.12.2", features = ["chrono", "tds73", "time"]}
actix-web = "4.0.0"
actix-files = "0.6.5"
actix-cors = "0.7.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
serde_json = "1.0.64"
anyhow = "1.0.0"
dotenv ="0.15.0"
chrono = "0.4.38"
validator = {version = "0.18.1", features = ["derive"]}
